feat(get spot prices): implemented api endpoint for getting spot prices
- added new api endpoint for getting spot prices
