# src/lib/types/types.ts
@@ -10,7 +10,7 @@ export interface TSpotPriceDbo {
   price: Decimal
   timestamp: Date
 }
-export interface TSpotPriceSummary { prices: TSpotPrice[], meta: TSpotPriceMeta }
-export interface TSpotPrice { price_with_tax: Decimal, price: Decimal, timestamp: Date }
+export type TSpotPriceSummary = components['schemas']['TSpotPriceSummary']
+export type TSpotPrice = components['schemas']['TSpotPrice']
 export type TSpotPriceMeta = components['schemas']['TSpotPriceMeta']
 export type TApiError = components['schemas']['Error']
